[package]
name = "libbpf-async"
version = "0.1.0"
edition = "2021"
description = "library for writing BPF programs in Async Rust, complementary for libbpf-rs"
license = "LGPL-2.1 OR BSD-2-Clause"
repository = "https://github.com/fujita/libbpf-async"
homepage = "https://github.com/fujita/libbpf-async"
readme = "../README.md"
keywords = ["bpf", "libbpf", "async"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libbpf-rs = { git = "https://github.com/libbpf/libbpf-rs.git", rev = "bf362ab6612959f2a89d4833b00023d1bd115c6d" }
nix = "0.22"
tokio = { version = "1.19", features = ["full"] }
page_size = "0.4"
futures = "0.3"
